# CHATBOT-AND-RAG-EVALUATION

./: .gitignore  README.md  chatbot_evaluation.ipynb  experiment_results.csv  main.py  pyproject.toml  rag_evaluation.ipynb
